SET( APP_NAME openig-demo-a320 )

SET( TARGET_SRC_FILES main.cpp )
SET( TARGET_OTHER_FILES DataFiles/default.txt DataFiles/richcolorsdemo.txt DataFiles/openig.xml )

ADD_EXECUTABLE( ${APP_NAME} ${TARGET_SRC_FILES}
                ${TARGET_OTHER_FILES} )

TARGET_LINK_LIBRARIES( ${APP_NAME}
    ${OSG_LIBRARIES}
    OpenIG-Engine
)

INSTALL(
    TARGETS ${APP_NAME}
    RUNTIME DESTINATION bin/openig-a320 COMPONENT openig
)

SET_TARGET_PROPERTIES( ${APP_NAME} PROPERTIES PROJECT_LABEL "Application A320" )

SET(INSTALL_INCDIR include)
SET(INSTALL_BINDIR bin/openig-a320)
IF(WIN32)
    SET(INSTALL_LIBDIR bin)
    SET(INSTALL_ARCHIVEDIR lib)
ELSE()
    SET(INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR})
    SET(INSTALL_ARCHIVEDIR ${CMAKE_INSTALL_LIBDIR})
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/default.txt DESTINATION ${INSTALL_BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/iitsec.txt DESTINATION ${INSTALL_BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/richcolorsdemo.txt DESTINATION ${INSTALL_BINDIR})
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/flightpath.path DESTINATION ${INSTALL_BINDIR}/demo/)
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/openig.xml DESTINATION ${INSTALL_BINDIR}/igdata/)
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DataFiles/OpenIG-Splash.jpg DESTINATION ${INSTALL_BINDIR}/igdata/)
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/../Resources/OpenIG-Splash-BasedOnOpenIG.png DESTINATION ${INSTALL_BINDIR}/igdata/)
