SET( LIB_NAME OpenIG-Utils )
SET( HEADER_PATH ${PROJECT_SOURCE_DIR}/Core-Utils )
ADD_DEFINITIONS( -DIGCOREUTILS_LIBRARY )

SET( LIB_PUBLIC_HEADERS    
    ${HEADER_PATH}/Config.h    
    ${HEADER_PATH}/Export.h    
    ${HEADER_PATH}/GLErrorUtils.h
    ${HEADER_PATH}/TBO.h
    ${HEADER_PATH}/FrameLogging.h
	${HEADER_PATH}/ShaderUtils.h
	${HEADER_PATH}/TextureCache.h
)

SET( _IgCoreUtilsSourceFiles    
    GLErrorUtils.cpp
	ShaderUtils.cpp
    TBO.cpp
	TextureCache.cpp
)

ADD_LIBRARY( ${LIB_NAME} SHARED
        ${LIB_PUBLIC_HEADERS}
        ${_IgCoreUtilsSourceFiles}
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES( ${LIB_NAME}
    ${OSG_LIBRARIES}
	${OPENGL_LIBRARY}
	${Boost_LIBRARIES}
	OpenIG-Graphics
)

SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES VERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES SOVERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PROJECT_LABEL "Core Utils" )
SET_TARGET_PROPERTIES (${target} PROPERTIES DEFINE_SYMBOL  "IGCOREUTILS_LIBRARY")

INCLUDE( ModuleInstall REQUIRED )
